--- a/staff_management/views/staff_list_template.xml
+++ b/staff_management/views/staff_list_template.xml
@@ -2,6 +2,14 @@
 <odoo>
     <template id="staff_list_template" name="Staff List">
         <t t-call="website.layout">
+            <style>
+                .table th {
+                background-color: #007bff; important;
+                color: #fff;
+                padding: 12px;
+                text-align: center;
+                }
+            </style>
             <div class="container mt-4 mb-5">
                 <h1 class="text-center mb-4">Quản lý nhân sự y tế</h1>
 
