--- a/staff_management/views/staff_type_list_template.xml
+++ b/staff_management/views/staff_type_list_template.xml
@@ -2,6 +2,14 @@
 <odoo>
     <template id="staff_type_list_template" name="Staff Type List">
         <t t-call="website.layout">
+            <style>
+                .table th {
+                background-color: #007bff; important;
+                color: #fff;
+                padding: 12px;
+                text-align: center;
+                }
+            </style>
             <div class="container mt-4 mb-5">
                 <h1 class="text-center mb-4">Quản lý nhân sự y tế</h1>
 
@@ -41,7 +49,7 @@
                     <div class="card-body p-0">
                         <div class="table-responsive">
                             <table class="table table-hover table-striped mb-0">
-                                <thead class="thead-light">
+                                <thead>
                                     <tr>
                                         <th>Mã chức vụ</th>
                                         <th>Tên chức vụ</th>
