--- a/prescription_management/views/clinic_service_templates.xml
+++ b/prescription_management/views/clinic_service_templates.xml
@@ -80,7 +80,7 @@
                             <t t-if="clinic_services">
                                 <t t-foreach="clinic_services" t-as="service">
                                     <tr t-att-class="'bg-light' if service_index % 2 == 0 else ''">
-                                        <td class="text-center" t-esc="service_index + 1"/>
+                                        <td class="text-center" t-esc="(pager and (pager['page']-1)*10 or 0) + service_index + 1"/>
                                         <td>
                                             <strong t-esc="service.service_name"/>
                                             <t t-if="service.description">
@@ -136,6 +136,34 @@
                     </table>
                 </div>
 
+                <!-- Pagination -->
+                <t t-if="pager">
+                    <div class="o_patient_pagination mt-3">
+                        <ul class="pagination justify-content-center">
+                            <li t-attf-class="page-item #{pager['page'] == 1 and 'disabled' or ''}">
+                                <a t-att-href="pager['page_previous'] and pager['page_previous']['url'] or '#'" class="page-link">
+                                    Trước
+                                </a>
+                            </li>
+                            <t t-foreach="pager['page_ids']" t-as="page">
+                                <li t-attf-class="page-item #{page['num'] == pager['page'] and 'active' or ''}">
+                                    <a t-att-href="page['url']" class="page-link">
+                                        <t t-esc="page['num']"/>
+                                    </a>
+                                </li>
+                            </t>
+                            <li t-attf-class="page-item #{pager['page'] == pager['page_count'] and 'disabled' or ''}">
+                                <a t-att-href="pager['page_next'] and pager['page_next']['url'] or '#'" class="page-link">
+                                    Tiếp
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="text-center text-muted">
+                        <small>Hiển thị <t t-esc="(pager['page']-1) * 10 + 1"/> - <t t-esc="min(pager['page'] * 10, total_count)"/> trên tổng số <t t-esc="total_count"/> dịch vụ</small>
+                    </div>
+                </t>
+
                 <div class="mt-4">
                     <div class="alert alert-info">
                         <p>
@@ -149,7 +177,7 @@
         </t>
     </template>
 
-    <!-- Template for service detail view -->
+    <!-- Template for service detail view remains unchanged -->
     <template id="clinic_service_detail_template" name="Clinic Service Detail">
         <t t-call="website.layout">
             <div class="container mt-4">
