--- a/prescription_management/views/prescription_edit_templates.xml
+++ b/prescription_management/views/prescription_edit_templates.xml
@@ -3,6 +3,14 @@
     <!-- Template for creating a new prescription -->
     <template id="new_prescription_template" name="New Prescription">
         <t t-call="website.layout">
+            <style>
+                .table th {
+                background-color: #007bff;
+                color: #fff;
+                padding: 12px;
+                text-align: center;
+                }
+            </style>
             <div class="container mt-4">
                 <div class="row">
                     <div class="col-12">
@@ -102,6 +110,14 @@
     <!-- Template for editing a prescription -->
     <template id="edit_prescription_template" name="Edit Prescription">
         <t t-call="website.layout">
+            <style>
+                .table th {
+                background-color: #007bff;
+                color: #fff;
+                padding: 12px;
+                text-align: center;
+                }
+            </style>
             <div class="container mt-4">
                 <div class="row">
                     <div class="col-12">
